testdata/rust/05_very_complex/expected/private=1,protected=1,internal=1,implementation=0.txt
<file path="source.rs">

trait Configurable {

    from_source<S: DataSource>(source: &S) -> Self
}

trait DataSource {
    type Reader<'a>: std::io::Read where Self: 'a;
    type Config<T: Clone>: Clone;

    get_reader<'a>() -> Self::Reader<'a>

    get_config<T: Clone>(&self) -> Self::Config<T>

    process_with_bounds<'a, T, U>(input: T) -> U
}

struct ServerConfig {
    host: String,
    port: u16,
    -internal_key: Option<String>,
}

impl Configurable for ServerConfig {

    -from_source<S: DataSource>(source: &S) -> Self
}

process_all_sources<F>(sources: Vec<&dyn DataSource>, mut processor: F) where F: for<'a> FnMut(Box<dyn std::io::Read + 'a>),

trait AdvancedContainer<const N: usize> {
    type Item<'a>: Clone where Self: 'a;
    type Iterator<'a>: Iterator<Item = Self::Item<'a>> where Self: 'a;

    get_items<'a>() -> Self::Iterator<'a>

    process_batch<'a, F>(f: F) -> [Option<Self::Item<'a>>
}

struct FixedArray<T: Clone, const N: usize> {
    -data: [Option<T>; N],
}

impl FixedArray<T, N> {

    new() -> Self

    -is_valid_index(&self, index: usize) -> bool

    ~get_unchecked(&self, index: usize) -> Option<&T>
}

impl AdvancedContainer<N> for FixedArray<T, N> {

    -type Item = &'a T where T: 'a;

    -get_items<'a>() -> Self::Iterator<'a>

    -process_batch<'a, F>(f: F) -> [Option<Self::Item<'a>>; N] where F: Fn(usize) -> Option<Self::Item<'a>>
}

trait AsyncDataProcessor {
    type Output<'a>: Send where Self: 'a;
    type Error: std::error::Error + Send + Sync;

    async process_async<'a>(data: &'a [u8]) -> Result<Self::Output<'a>, Self::Error>

    async batch_process<'a, I>(inputs: I) -> Vec<Result<Self::Output<'a>, Self::Error>>
}

-main()
</file>
